--- a/blog-details.html
+++ b/blog-details.html
@@ -29,10 +29,9 @@
 
   <!-- =======================================================
   * Template Name: Adainn Technologies
-  * Template URL: https://bootstrapmade.com/Adainn Technologies-bootstrap-startup-template/
+
   * Updated: Nov 01 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+
   ======================================================== -->
 </head>
 
@@ -180,7 +179,7 @@
           <!-- Blog Author Section -->
           <section id="blog-author" class="blog-author section">
 
-            <div class="container">
+            <div class="container"  >
               <div class="author-container d-flex align-items-center">
                 <img src="assets/img/blog/blog-author.jpg" class="rounded-circle flex-shrink-0" alt="">
                 <div>
@@ -515,7 +514,7 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: /license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="#">Adainn Technologies</a> 
       
