--- a/blog.html
+++ b/blog.html
@@ -38,13 +38,7 @@
     <!-- Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
 
-    <!-- =======================================================
-  * Template Name: Adainn Technologies
-  * Template URL: https://bootstrapmade.com/Adainn Technologies-bootstrap-startup-template/
-  * Updated: Nov 01 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+   
   </head>
 
   <body class="blog-page">
@@ -449,7 +443,7 @@
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Licensing information: /license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
 
           Designed by  <a href="#">Adainn Technologies</a> 
