--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
     <!-- =======================================================
   * Template Name: FlexStart
-  * Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
+  
   * Updated: Nov 01 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Author: Adainn Technologies.com
+  * License: /license/
   ======================================================== -->
   </head>
 
@@ -1888,7 +1888,7 @@
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
           <!-- You can delete the links only if you've purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Licensing information: /license/ -->
           <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
           Designed by <a href="#">Adainn Technologies</a> 
           <!-- Distributed by <a href=“https://themewagon.com>ThemeWagon -->
