--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -29,10 +29,10 @@
 
   <!-- =======================================================
   * Template Name: Adainn Technologies
-  * Template URL: https://bootstrapmade.com/Adainn Technologies-bootstrap-startup-template/
+  * Template URL: /Adainn Technologies-bootstrap-startup-template/
   * Updated: Nov 01 2024 with Bootstrap v5.3.3
   * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * License: /license/
   ======================================================== -->
 </head>
 
@@ -52,10 +52,10 @@
             <li>
               <a href="index.html#hero">Home<br /></a>
             </li>
-            <li><a href="index.html#about">About</a></li>
+            
             <li><a href="index.html#services">Services</a></li>
             <li><a href="index.html#portfolio">Portfolio</a></li>
-            <li><a href="index.html#team">Collaboration</a></li>
+            <li><a href="index.html#about">About</a></li>
             <li><a href="blog.html" class="active">Blog</a></li>
             <li><a href="index.html#contact">Contact</a></li>
           </ul>
@@ -246,13 +246,13 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Adainn Technologies</strong> <span>All Rights Reserved</span></p>
+      <p>© 2025<span>Copyright</span> <strong class="px-1 sitename">Adainn Technologies</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Licensing information: /license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
+        Designed by <a href="/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
       </div>
     </div>
 
