--- a/index.html
+++ b/index.html
@@ -757,6 +757,23 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
+              <div class="values-card">
+                <div class="card-visual adaptation-visual">
+                  <div class="floating-element"></div>
+                  <div class="icon-container">
+                    <i class="fas fa-sync-alt"></i>
+                  </div>
+                </div>
+                <div class="card-content">
+                  <div class="card-number">04</div>
+                  <h3>Adaptation</h3>
+                  <p>
+                    We continuously evolve and adapt to changing environments, ensuring our solutions remain relevant and effective in a dynamic world.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -1230,12 +1247,13 @@
     <div class="offices-grid-layout">
 
       <!-- Navi Mumbai -->
-      <div class="office-info-card">
+      <div class="office-info-card" style="position:relative;">
         <div class="office-icon-wrapper">
           <svg viewBox="0 0 24 24">
             <path d="M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z"/>
           </svg>
         </div>
+        <img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg" alt="India Flag" style="position:absolute;top:10px;right:10px;width:40px;height:28px;object-fit:contain;box-shadow:0 1px 4px rgba(0,0,0,0.08);border-radius:4px;" />
         <h3 class="office-card-title">Navi Mumbai Office</h3>
         <p class="office-address-text">
           Shop No. 7, Plot No. 12, Old VSNL Colony,<br>
@@ -1253,12 +1271,13 @@
       </div>
 
       <!-- Nashik -->
-      <div class="office-info-card">
+      <div class="office-info-card" style="position:relative;">
         <div class="office-icon-wrapper">
           <svg viewBox="0 0 24 24">
             <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
           </svg>
         </div>
+        <img src="https://upload.wikimedia.org/wikipedia/en/4/41/Flag_of_India.svg" alt="India Flag" style="position:absolute;top:10px;right:10px;width:40px;height:28px;object-fit:contain;box-shadow:0 1px 4px rgba(0,0,0,0.08);border-radius:4px;" />
         <h3 class="office-card-title">Nashik Office</h3>
         <p class="office-address-text">
           Kapadia Commercial Complex, Office No. 23/24,<br>
@@ -1276,17 +1295,17 @@
       </div>
 
       <!-- Australia -->
-      <div class="office-info-card">
+      <div class="office-info-card" style="position:relative;">
         <div class="office-icon-wrapper">
           <svg viewBox="0 0 24 24">
             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
           </svg>
         </div>
+        <img src="https://upload.wikimedia.org/wikipedia/en/b/b9/Flag_of_Australia.svg" alt="Australia Flag" style="position:absolute;top:10px;right:10px;width:40px;height:28px;object-fit:contain;box-shadow:0 1px 4px rgba(0,0,0,0.08);border-radius:4px;" />
         <h3 class="office-card-title">Australia Office</h3>
         <p class="office-address-text">
-          --<br>
-          --<br>
-          Australia
+          LEVEL 1/457-459 ELIZABETH STREET, <br>
+          SURRY HILLS NSW 2010<br>
         </p>
         <div class="office-contact-details">
           <div class="office-detail-item">
