--- a/index.html
+++ b/index.html
@@ -1262,11 +1262,11 @@
         </p>
         <div class="office-contact-details">
           <div class="office-detail-item">
-            <svg viewBox="0 0 24 24">
+            <!-- <svg viewBox="0 0 24 24">
               <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
             </svg>
             enquiry@combatsolutions.co.in
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -1285,12 +1285,12 @@
           Near Tata Motors, Nashik, Maharashtra – 422002
         </p>
         <div class="office-contact-details">
-          <div class="office-detail-item">
+          <!-- <div class="office-detail-item">
             <svg viewBox="0 0 24 24">
               <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
             </svg>
             combatsolutionsai@gmail.com
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -1308,12 +1308,12 @@
           SURRY HILLS NSW 2010<br>
         </p>
         <div class="office-contact-details">
-          <div class="office-detail-item">
+          <!-- <div class="office-detail-item">
             <svg viewBox="0 0 24 24">
               <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
             </svg>
             sales@combatsolutions.co.in
-          </div>
+          </div> -->
         </div>
       </div>
 
