--- a/index.html
+++ b/index.html
@@ -759,10 +759,10 @@
             </div>
             <div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
               <div class="values-card">
-                <div class="card-visual adaptation-visual">
+               <div class="card-visual collaboration-visual">
                   <div class="floating-element"></div>
                   <div class="icon-container">
-                    <i class="fas fa-sync-alt"></i>
+                    <img src="https://cdn-icons-png.flaticon.com/512/189/189792.png" alt="Adaptation" style="width:48px;height:48px;object-fit:contain;" />
                   </div>
                 </div>
                 <div class="card-content">
@@ -787,14 +787,14 @@
               <div class="stats-item d-flex align-items-center w-100 h-100">
                 <i class="bi bi-emoji-smile color-blue flex-shrink-0"></i>
                 <div >
-                  <div class="d-flex">
+                  <!-- <div class="d-flex">
                     <span
                     data-purecounter-start="0"
                     data-purecounter-end="30"
                     data-purecounter-duration="1"
                     class="purecounter"
                   ></span><span>+</span>
-                  </div>
+                  </div> -->
 
                   <p>Happy Clients</p>
                 </div>
@@ -809,14 +809,14 @@
                   style="color: #ee6c20"
                 ></i>
                 <div>
-                 <div class="d-flex">
+                 <!-- <div class="d-flex">
                     <span
                     data-purecounter-start="0"
                     data-purecounter-end="50"
                     data-purecounter-duration="1"
                     class="purecounter"
                   ></span><span>+</span>
-                  </div>
+                  </div> -->
                   <p>Projects Done</p>
                 </div>
               </div>
@@ -1247,7 +1247,7 @@
     <div class="offices-grid-layout">
 
       <!-- Navi Mumbai -->
-      <div class="office-info-card" style="position:relative;">
+      <div class="office-info-card">
         <div class="office-icon-wrapper">
           <svg viewBox="0 0 24 24">
             <path d="M12 2L2 7v10c0 5.55 3.84 9.74 9 11 5.16-1.26 9-5.45 9-11V7l-10-5z"/>
@@ -1261,8 +1261,8 @@
           Panvel, Navi Mumbai, Maharashtra – 410209
         </p>
         <div class="office-contact-details">
-          <div class="office-detail-item">
-            <!-- <svg viewBox="0 0 24 24">
+          <!-- <div class="office-detail-item">
+            <svg viewBox="0 0 24 24">
               <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
             </svg>
             enquiry@combatsolutions.co.in
@@ -1271,7 +1271,7 @@
       </div>
 
       <!-- Nashik -->
-      <div class="office-info-card" style="position:relative;">
+      <div class="office-info-card">
         <div class="office-icon-wrapper">
           <svg viewBox="0 0 24 24">
             <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
@@ -1295,18 +1295,19 @@
       </div>
 
       <!-- Australia -->
-      <div class="office-info-card" style="position:relative;">
+      <div class="office-info-card">
         <div class="office-icon-wrapper">
           <svg viewBox="0 0 24 24">
             <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
           </svg>
-        </div>
-        <img src="https://upload.wikimedia.org/wikipedia/en/b/b9/Flag_of_Australia.svg" alt="Australia Flag" style="position:absolute;top:10px;right:10px;width:40px;height:28px;object-fit:contain;box-shadow:0 1px 4px rgba(0,0,0,0.08);border-radius:4px;" />
+          </div>
+            <img src="https://upload.wikimedia.org/wikipedia/en/b/b9/Flag_of_Australia.svg" alt="Australia Flag" style="position:absolute;top:10px;right:10px;width:40px;height:28px;object-fit:contain;box-shadow:0 1px 4px rgba(0,0,0,0.08);border-radius:4px;" />
+        
         <h3 class="office-card-title">Australia Office</h3>
-        <p class="office-address-text">
-          LEVEL 1/457-459 ELIZABETH STREET, <br>
-          SURRY HILLS NSW 2010<br>
-        </p>
+            <p class="office-address-text">
+            LEVEL 1/457-459 ELIZABETH STREET, <br>
+            SURRY HILLS NSW 2010<br>
+          </p>
         <div class="office-contact-details">
           <!-- <div class="office-detail-item">
             <svg viewBox="0 0 24 24">
@@ -1316,7 +1317,6 @@
           </div> -->
         </div>
       </div>
-
     </div>
   </div>
 </section>
