--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       >
         <a href="index.html" class="logo d-flex align-items-center me-auto">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="assets/img/a-removebg-preview.png" alt="" />
+          <img src="assets/img/a-removebg-preview.png" alt="" width="110px" height="160px" />
           <!-- <h1 class="sitename">Adainn Technologies</h1> -->
         </a>
 
