--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
               <div class="values-card">
                 <div class="card-visual integrity-visual">
                   <div class="floating-element"></div>
@@ -757,6 +757,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
               <div class="values-card">
                <div class="card-visual collaboration-visual">
@@ -924,18 +925,22 @@
             <div class="swiper-wrapper align-items-center">
               <div class="swiper-slide">
                 <img
-                  src="assets/img/clients/client-1.png"
-                  class="img-fluid"
+                  src="assets/img/clients/ashoka.png"
+                  class="Ashoka"
                   alt=""
+                  width="70px"
+                  height="50px"
                 />
               </div>
               <div class="swiper-slide">
                 <img
-                  src="assets/img/clients/client-2.png"
-                  class="img-fluid"
+                  src="assets/img/clients/nabani.png"
+                  class="nabani"
                   alt=""
+                  width="100px"
+                  height="70px"
                 />
-              </div>
+              </div>  
               <div class="swiper-slide">
                 <img
                   src="assets/img/clients/client-3.png"
