--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Blog - Adainn Technologies Bootstrap Template</title>
+    <title>Blog - AdaInn Technologies Bootstrap Template</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -49,7 +49,7 @@
         <a href="index.html" class="logo d-flex align-items-center me-auto">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <img src="assets/img/logo.png" alt="" />
-          <h1 class="sitename">Adainn Technologies</h1>
+          <h1 class="sitename">AdaInn Technologies</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -339,7 +339,7 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="index.html" class="d-flex align-items-center">
-              <span class="sitename">Adainn Technologies<span>
+              <span class="sitename">AdaInn Technologies<span>
             </a>
             <div class="footer-contact pt-3">
               <p>Level 1, 457-459 Elizabeth Street</p>
@@ -410,11 +410,11 @@
       <div class="container copyright text-center mt-4">
         <p>
           © 2025<span>Copyright</span>
-          <strong class="px-1 sitename">Adainn Technologies</strong>
+          <strong class="px-1 sitename">AdaInn Technologies</strong>
           <span>All Rights Reserved</span>
         </p>
         <div class="credits">
-          Designed by <a href="#">Adainn Technologies</a> 
+          Designed by <a href="#">AdaInn Technologies</a> 
           Distributed by <a href=“https://themewagon.com>ThemeWagon
         </div>
       </div> 
