--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <i class="bi bi-chat-dots icon"></i>
               <h3 class="text-center">Conversational AI & Chatbots</h3>
               <p class="text-start">Go beyond simple chatbots with intelligent conversational AI. We build sophisticated
-                virtual agents that can handle complex customer inquiries, personalize user experiences, and automate
+                virtual agents that can handle complex   customer inquiries, personalize user experiences, and automate
                 customer service, freeing your team for higher-value tasks.</p>
               <ul class="text-start">
                 <li>Multi-Channel Virtual Assistants (web, app, voice)</li>
@@ -448,6 +448,7 @@
               </div>
 
               <p><b>Industry:</b> Education</p>
+              <p><b>Technologies:</b> OpenAI API, LangChain, n8n, Twilio, Meta WhatsApp API</p>
               <p>
                 <b>Solution:</b> AI-powered virtual expert trained on domain knowledge to provide accurate,
                 context-aware answers via web and messaging platforms for interactive learning.
@@ -474,6 +475,7 @@
               </div>
 
               <p><b>Industry:</b> Healthcare</p>
+              <p><b>Technologies:</b>n8n, Twilio, Meta API, OpenAI API</p>
               <p>
                 <b>Solution:</b> Modular healthcare management system with AI agents to automate patient workflows,
                 integrate
@@ -501,6 +503,7 @@
               </div>
 
               <p><b>Industry:</b> Business Automation</p>
+              <p><b>Technologies:</b>React.js, OpenAI API, LangGraph, Qdrant DB, PostgreSQL, Ollama </p>
               <p>
                 <b>Solution:</b> No-code bot creation platform allowing businesses to design, test, and deploy
                 AI-powered bots for customer service, lead generation, and internal automation.
@@ -525,6 +528,7 @@
               </div>
 
               <p><b>Industry:</b> Enterprise Automation / FinTech </p>
+               <p><b>Technologies:</b>Document AI, Tesseract OCR, OpenAI API, Apache NiFi,, PostgreSQL </p>
               <p>
                 <b>Solution:</b> AI-driven system to ingest, classify, and extract structured data from documents, with
                 validation
@@ -550,6 +554,7 @@
               </div>
 
               <p><b>Industry:</b> Real Estate </p>
+              <p><b>Technologies:</b>Document AI, Open AI, LangGraph, Qdrant DB, PostgreSQL </p>
               <p>
                 <b>Solution:</b> Construction-focused project management tool with AI-based scheduling, progress
                 tracking, and resource allocation for efficient project delivery.
@@ -574,6 +579,7 @@
               </div>
 
               <p><b>Industry:</b> Mining </p>
+              <p><b>Technologies:</b> Python, Docker, REST APIs </p>
               <p>
                 <b>Solution:</b> Comprehensive tool management system enabling mining companies to track, maintain, and
                 optimize equipment usage for improved operational efficiency.
