ui new changes  resolved

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="row gy-4">
           <!-- Service Card 1 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-diagram-3 icon"></i>
               <h3 class="text-center">AI Strategy & Roadmap</h3>
               <p class="text-start">We don't just build technology—we build a plan. Our expert consultants partner with
@@ -144,7 +144,7 @@
           </div>
           <!-- Service Card 2 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-cpu icon"></i>
               <h3 class="text-center">AI Product & Model Development</h3>
               <p class="text-start">Transform your vision into a reality with our end-to-end AI product and model
@@ -164,7 +164,7 @@
           </div>
           <!-- Service Card 3 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-phone icon"></i>
               <h3 class="text-center">AI-Powered Mobile & Web Apps</h3>
               <p class="text-start">Create intelligent applications that deliver a superior user experience. We
@@ -185,7 +185,7 @@
           </div>
           <!-- Service Card 4 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-magic icon"></i>
               <h3 class="text-center">Generative AI Solutions</h3>
               <p class="text-start">Leverage the power of large language models and generative AI to automate creative
@@ -205,7 +205,7 @@
           </div>
           <!-- Service Card 5 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-bar-chart-line icon"></i>
               <h3 class="text-center">Data Science & Predictive Analytics</h3>
               <p class="text-start">Unlock the hidden value in your data with our advanced analytics and predictive
@@ -225,7 +225,7 @@
           </div>
           <!-- Service Card 6 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-eye icon"></i>
               <h3 class="text-center">Computer Vision & Automation</h3>
               <p class="text-start">Empower your operations with AI that can "see." We develop and implement computer
@@ -245,11 +245,11 @@
           </div>
           <!-- Service Card 7 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-chat-dots icon"></i>
               <h3 class="text-center">Conversational AI & Chatbots</h3>
               <p class="text-start">Go beyond simple chatbots with intelligent conversational AI. We build sophisticated
-                virtual agents that can handle complex   customer inquiries, personalize user experiences, and automate
+                virtual agents that can handle complex customer inquiries, personalize user experiences, and automate
                 customer service, freeing your team for higher-value tasks.</p>
               <ul class="text-start">
                 <li>Multi-Channel Virtual Assistants (web, app, voice)</li>
@@ -265,7 +265,7 @@
           </div>
           <!-- Service Card 8 -->
           <div class="col-lg-4 col-md-6">
-            <div class="service-item item-cyan position-relative h-100 d-flex flex-column">
+            <div class="service-item item-primary position-relative h-100 d-flex flex-column">
               <i class="bi bi-shield-check icon"></i>
               <h3 class="text-center">Responsible AI & Governance</h3>
               <p class="text-start">Navigate the ethical and regulatory landscape of AI with confidence. We provide
@@ -285,6 +285,7 @@
           </div>
         </div>
       </div>
+      
       <style>
         .service-item h3 {
           font-size: 1.18rem;
@@ -449,9 +450,12 @@
 
               <p><b>Industry:</b> Education</p>
               <p><b>Technologies:</b> OpenAI API, LangChain, n8n, Twilio, Meta WhatsApp API</p>
+              <p><b> Business Benefit:</b> Students and professionals often struggle to get quick, accurate,
+                and context-relevant expert advice, slowing learning and decision-making.</p>
+
               <p>
-                <b>Solution:</b> AI-powered virtual expert trained on domain knowledge to provide accurate,
-                context-aware answers via web and messaging platforms for interactive learning.
+                <b>Solution:</b> AI-powered virtual expert trained
+                on domain-specific data to deliver instant, accurate answers via web and messaging platforms.
               </p>
             </div>
 
@@ -475,12 +479,14 @@
               </div>
 
               <p><b>Industry:</b> Healthcare</p>
-              <p><b>Technologies:</b>n8n, Twilio, Meta API, OpenAI API</p>
+              <p><b>Technologies:</b> n8n, Twilio, Meta API, OpenAI API</p>
+
+              <p><b> Business Benefit:</b> Healthcare providers face
+                inefficiencies in patient management, leading to longer wait times and lower patient satisfaction.</p>
+
               <p>
-                <b>Solution:</b> Modular healthcare management system with AI agents to automate patient workflows,
-                integrate
-                with EHRs,
-                and improve care coordination.
+                <b>Solution:</b> Modular healthcare management
+                system with AI agents to automate patient workflows, and improve care coordination.
               </p>
             </div>
           </div>
@@ -503,10 +509,14 @@
               </div>
 
               <p><b>Industry:</b> Business Automation</p>
-              <p><b>Technologies:</b>React.js, OpenAI API, LangGraph, Qdrant DB, PostgreSQL, Ollama </p>
+              <p><b>Technologies:</b> React.js, OpenAI API, LangGraph, Qdrant DB, PostgreSQL, Ollama </p>
+
+              <p><b> Business Benefit:</b> Businesses
+                lose time and resources building automation tools from scratch, delaying go-to-market for AI
+                initiatives.</p>
               <p>
-                <b>Solution:</b> No-code bot creation platform allowing businesses to design, test, and deploy
-                AI-powered bots for customer service, lead generation, and internal automation.
+                <b>Solution:</b> No-code bot creation platform enabling rapid design, testing,
+                and deployment of AI-powered bots for customer service, lead generation, and internal automation.
               </p>
             </div>
           </div>
@@ -528,11 +538,12 @@
               </div>
 
               <p><b>Industry:</b> Enterprise Automation / FinTech </p>
-               <p><b>Technologies:</b>Document AI, Tesseract OCR, OpenAI API, Apache NiFi,, PostgreSQL </p>
-              <p>
-                <b>Solution:</b> AI-driven system to ingest, classify, and extract structured data from documents, with
-                validation
-                workflows and API-ready output for seamless integration.
+              <p><b>Technologies:</b> Document AI, Tesseract OCR, OpenAI API, Apache NiFi,, PostgreSQL </p>
+              <p><b> Business Benefit:</b> Manual document handling is time-consuming,
+                error-prone, and delays operational workflows in finance and enterprise processes. </p>
+
+              <p><b>Solution:</b> AI-driven system to ingest, classify, and extract structured data from documents,
+                with validation workflows and API-ready output for seamless integration.
               </p>
             </div>
           </div>
@@ -554,10 +565,12 @@
               </div>
 
               <p><b>Industry:</b> Real Estate </p>
-              <p><b>Technologies:</b>Document AI, Open AI, LangGraph, Qdrant DB, PostgreSQL </p>
+              <p><b>Technologies:</b> Document AI, Open AI, LangGraph, Qdrant DB, PostgreSQL </p>
+              <p><b> Business Benefit:</b> Construction projects suffer from
+                delays and cost overruns due to poor coordination and resource mismanagement. </p>
               <p>
-                <b>Solution:</b> Construction-focused project management tool with AI-based scheduling, progress
-                tracking, and resource allocation for efficient project delivery.
+                <b>Solution:</b> AI-based construction project management platform with scheduling,
+                live progress tracking, and smart resource allocation to ensure timely delivery.
               </p>
             </div>
           </div>
@@ -580,9 +593,12 @@
 
               <p><b>Industry:</b> Mining </p>
               <p><b>Technologies:</b> Python, Docker, REST APIs </p>
+              <p><b> Business Benefit:</b> Mining companies often face high downtime and asset losses due to poor tool
+                visibility and unplanned maintenance. </p>
               <p>
-                <b>Solution:</b> Comprehensive tool management system enabling mining companies to track, maintain, and
-                optimize equipment usage for improved operational efficiency.
+              <p><b>Solution:</b> Comprehensive tool management system that tracks inventory, schedules preventive
+                maintenance,
+                and analyzes usage patterns to extend equipment life and reduce downtime.
               </p>
             </div>
           </div>
@@ -615,7 +631,7 @@
         @media (max-width: 767.98px) {
           .portfolio-card.flex-row {
             flex-direction: column !important;
-            text-align: center;
+            text-align:
           }
 
           .portfolio-img-wrapper {
@@ -858,17 +874,30 @@
                 }
               </script>
           <div class="swiper-wrapper align-items-center img-container">
-            <div class="swiper-slide">
-              <img src="assets/img/clients/octocore.png" class="nabani" alt="" width="100px" height="70px" />
+            <div class="swiper-slide d-flex justify-content-center align-items-center">
+              <img src="assets/img/clients/ashoka.png" alt="" width="70px" height="50px" />
             </div>
 
-            <div class="swiper-slide">
-              <img src="assets/img/clients/ashoka.png" class="Ashoka" alt="" width="70px" height="50px" />
+            <div class="swiper-slide d-flex justify-content-center align-items-center">
+              <img src="assets/img/clients/integers.png" alt="" width="100px" height="70px" />
             </div>
 
-            <div class="swiper-slide">
-              <img src="assets/img/clients/nabani.png" class="nabani" alt="" width="100px" height="70px" />
+            <div class="swiper-slide d-flex justify-content-center align-items-center">
+              <img src="assets/img/clients/nabani.png" alt="" width="100px" height="70px" />
             </div>
+
+            <div class="swiper-slide d-flex justify-content-center align-items-center">
+              <img src="assets/img/clients/octocore.png" alt="" width="80px" height="40px" />
+            </div>
+            <div class="swiper-slide d-flex justify-content-center align-items-center">
+              <img src="assets/img/clients/TendersOnTime.png" alt="" width="100px" height="70px" />
+            </div>
+
+
+            <div class="swiper-slide d-flex justify-content-center align-items-center">
+              <img src="assets/img/clients/yokagowa.png" alt="" width="100px" height="70px" />
+            </div>
+
 
 
 
@@ -897,23 +926,7 @@
               <p class="contact-description">We'd love to hear from you! Whether you have a question about our services,
                 need support, or just want to say hello, don't hesitate to reach out.</p>
 
-              <!-- <div class="contact-detail-item">
-                          <i class="fas fa-map-marker-alt contact-icon"></i>
-                          <div class="contact-content">
-                              <h5 class="contact-label">Our Address</h5>
-                              <p class="contact-text">123 Business Street, Suite 100<br>
-                              New York, NY 10001, USA</p>
-                          </div>
-                      </div> -->
 
-              <!-- <div class="contact-detail-item">
-                          <i class="fas fa-phone contact-icon"></i>
-                          <div class="contact-content">
-                              <h5 class="contact-label">Call Us</h5>
-                              <p class="contact-text">+1 (555) 123-4567<br>
-                              Mon - Fri, 9:00 AM - 6:00 PM</p>
-                          </div>
-                      </div> -->
 
               <div class="contact-detail-item">
                 <i class="fas fa-envelope contact-icon"></i>
@@ -924,14 +937,7 @@
                 </div>
               </div>
 
-              <!-- <div class="contact-detail-item">
-                          <i class="fas fa-clock contact-icon"></i>
-                          <div class="contact-content">
-                              <h5 class="contact-label">Business Hours</h5>
-                              <p class="contact-text">Monday - Friday: 9:00 AM - 6:00 PM<br>
-                              Saturday: 10:00 AM - 4:00 PM</p>
-                          </div>
-                      </div> -->
+
 
               <div class="contact-social-section">
                 <h5 class="social-title">Follow Us</h5>
@@ -986,8 +992,8 @@
 
     <section class="container py-5">
       <div class="container section-title" data-aos="fade-up">
-        <h2 class="text-center">Locations</h2>
-        <p>Our Offices</p>
+        <h2 class="text-center" style="font-size: '30px';">Our Offices</h2>
+        <!-- <p>Our Offices</p> -->
       </div>
 
       <!-- Country: Australia -->
@@ -1058,7 +1064,7 @@
 
   </main>
 
-  <footer id="footer" class="footer">
+  <footer id="footer" class="footer" mx-5>
 
 
 
