--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                     summarization, Prescription reminders</p>
                 </div>
                 <div class="portfolio-img-wrapper ms-3">
-                  <img src="assets/img/portfolio/chat.png" class="img-fluid rounded portfolio-img clickable-img"
+                  <img src="assets/img/portfolio/chat.jpeg" class="img-fluid rounded portfolio-img clickable-img"
                     alt="Doctor's Automation System"
                     style="width: 250px; height: 130px; object-fit: cover; cursor: pointer;" data-bs-toggle="modal"
                     data-bs-target="#portfolioModal2" />
@@ -602,8 +602,8 @@
                   <p><b>Problem :</b> Students and professionals often struggle to get quick, accurate,
                     and context-relevant expert advice, slowing learning and decision-making.</p>
                   <p>
-                    <b>Solution:</b> AI-powered virtual expert trained
-                    on domain-specific data to deliver instant, accurate answers via web and messaging platforms.
+                    <b>Solution:</b>Conversational AI assistant fine-tuned on curated domain datasets to deliver context-aware answers in real-time from industry experts. Integrated with web apps and WhatsApp for multi-platform access, 
+                    ensuring high-accuracy responses and knowledge depth for faster decision-making.
                   </p>
                 </div>
               </div>
@@ -623,7 +623,7 @@
             <div class="modal-body">
               <div class="row align-items-center">
                 <div class="col-md-5 text-center mb-3 mb-md-0">
-                  <img src="assets/img/portfolio/chat.png" class="img-fluid rounded"
+                  <img src="assets/img/portfolio/chat.jpeg" class="img-fluid rounded"
                     style="width: 300px; height: 250px; object-fit: contain;" alt="Doctor's Automation System" />
                 </div>
                 <div class="col-md-7">
@@ -633,8 +633,7 @@
                     inefficiencies in patient management, leading to longer wait times and lower patient satisfaction.
                   </p>
                   <p>
-                    <b>Solution:</b> Modular healthcare management
-                    system with AI agents to automate patient workflows, and improve care coordination.
+                    <b>Solution:</b> Modular AI healthcare management system leveraging NLP-based report summarization, and HIPAA/GDPR-compliant APIs for integration. Automates patient onboarding, scheduling, follow-up reminders, and care documentation, improving operational efficiency and patient satisfaction.
                   </p>
                 </div>
               </div>
@@ -664,8 +663,8 @@
                     lose time and resources building automation tools from scratch, delaying go-to-market for AI
                     initiatives.</p>
                   <p>
-                    <b>Solution:</b> No-code bot creation platform enabling rapid design, testing,
-                    and deployment of AI-powered bots for customer service, lead generation, and internal automation.
+                    <b>Solution:</b> No-code AI automation builder enabling businesses to create and deploy bots via drag-and-drop workflows, pre-trained AI templates, and multi-channel connectors (web, social, chat). This accelerates deployment of AI-driven customer service, lead generation,
+                     and internal process automation without technical dependencies keeping it open for all industries.
                   </p>
                 </div>
               </div>
@@ -755,9 +754,8 @@
                     tool
                     visibility and unplanned maintenance. </p>
                   <p>
-                    <b>Solution:</b> Comprehensive tool management system that tracks inventory, schedules preventive
-                    maintenance,
-                    and analyzes usage patterns to extend equipment life and reduce downtime.
+                    <b>Solution:</b> Cloud-based AI-enabled tool management platform that integrates IoT sensors for real-time asset tracking, predictive maintenance scheduling using ML algorithms, and analytics dashboards for usage optimization.
+                     The system reduces unplanned downtime and extends equipment lifecycle.
                   </p>
                 </div>
               </div>
